<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">Koki</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Log in</string>
    <string name="sign_out">Sign out</string>
    <string name="logged_in">Logged in…</string>
    <string name="logging_in">Logging in…</string>
    <string name="signing_up">Signing up…</string>
    <string name="signup_success">Sign up success!</string>
    <string name="signup_empty_response">Empty response</string>
    <string name="signup_invalid_fields">Invalid fields</string>
    <string name="signup_empty_fields">Empty fields</string>
    <string name="signup_timeout">Timeout</string>
    <string name="signup_email_exists">Email already exists</string>
    <string name="signup_username_exists">Username already exists</string>
    <string name="signup_null">Null response</string>
    <string name="signup_unknown">Unknown error occurred</string>
    <string name="wrong_username_password">Wrong Username or Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="sign_in_with_google">Continue with Google</string>
    <string name="reset_password">Reset your password</string>
    <string name="login_reset_password">Forgot Password?</string>
    <string name="intro">A beautiful Open Remote client</string>
    <string name="select_app_language">Select app language</string>
    <string name="app_language">App language</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be more than 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="exit">Exit</string>
    <string name="login_title">Let\'s log in</string>
    <string name="signin_create_account">Don\'t have an account? Sign up now!</string>
    <string name="type_password_help">Type your password</string>
    <string name="type_username_help">Type your username</string>
    <string name="signup_title">Let\'s sign up</string>
    <string name="type_email_help">Type your email (e.g. example@example.com)</string>
    <string name="retype_password_help">Retype your password</string>
    <string name="hint_username_or_password">Username or email</string>
    <string name="type_username_or_email_help">Type your username or email</string>
    <string name="choose_lang">Choose your language</string>
    <string name="home">Home</string>
    <string name="general_todo_msg">Todo</string>
    <string name="backup_type_app_label">Koki</string>
    <string name="assets">Assets</string>
    <string name="settings">Settings</string>
    <string name="monitoring">Monitor</string>
    <string name="drag_handle">Drag handle</string>
    <string name="assets_overview">Overview</string>
    <string name="asset_group">Asset group</string>
    <string name="asset_group_icon">Asset group icon</string>
    <string name="asset_group_description">Asset group description</string>
    <string name="asset_group_icon_next">Go to this asset group</string>
    <string name="greet_user">Hi, %s</string>
    <string name="day_title">Monday</string>
    <string name="temperature_txt">19\u00b0</string>
    <string name="Temperature_range">H: 24\u00b0 L: 14\u00b0</string>
    <string name="air_quality_title">Air quality</string>
    <string name="rain_fall_title">Rain fall</string>
    <string name="humidity_title">Humidity</string>
    <string name="wind_title">Wind</string>
    <string name="pressure_title">Pressure</string>
    <string name="cloud_title">Cloud</string>
    <string name="windDirection_title">Direction</string>
    <string name="home_appbar_background">Home appbar background</string>
    <string name="item_chart_overview">Chart overview icon</string>
    <string name="select_attribute">Select Attribute</string>
    <string name="time_frame">Time frame</string>
    <string name="ending">Ending</string>
    <string name="monitoring_choose_ending_date">Choose ending date</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="humidity_with_unit">Humidity (%)</string>
    <string name="rain_with_unit">Rainfall (mm)</string>
    <string name="temperature_with_unit">Temperature (°C)</string>
    <string name="wind_speed_with_unit">Wind speed (km/h)</string>
    <string name="reset_password_action">Send me a reset link</string>
    <string name="assets_unavailable">Assets are unavailable right now</string>
    <string name="assets_search_hint">Search assets</string>
    <string name="description">Description</string>
    <string name="assets_detail_icon">Asset icon</string>
    <string name="assets_title">Asset title</string>
    <string name="assets_id">Assets id</string>
    <string name="retry">Retry</string>
    <string name="home_provider_toggle">Toggle between OpenRemote (off)\nor custom provider (on)</string>
    <string name="hour_selection">Select hour of the day</string>
    <string name="ending_date_selection">Select ending date</string>
    <string name="invalid_date">Invalid date</string>
    <string name="datapoints_not_enough">Not enough datapoints</string>
    <string name="aqi_detail_custom">Current index is %.1f</string>
    <string name="temperature_detail_custom">Feels like %.1f%s</string>
    <string name="rain_detail_custom">%.1f%s expected in the next %d minutes</string>
    <string name="humidity_detail_custom">Humidity is %.1f%s right now</string>
    <string name="aqi_detail">Current index is %s</string>
    <string name="rain_detail">%.1f mm expected</string>
    <string name="humidity_detail">Humidity is %s%% right now</string>
    <string name="wind_detail">Wind speed is %.1f km/h</string>
    <string name="windDirection_detail">Wind direction is %s</string>
    <string name="weather_fail">Failed to fetch weather data: %s</string>
    <string name="temperature_location">Current location: %s</string>
    <string name="cloud_detail">Cloud cover is %d%%</string>
    <string name="pressure_detail">Pressure is %d hPa</string>
    <string name="temperature_detail">Feels like %.1f °C</string>
    <string name="pm25"><b>PM2.5:</b> %.2f <i>μg/m³</i></string>
    <string name="pm10"><b>PM10:</b> %.2f <i>μg/m³</i></string>
    <string name="o3"><b>O₃:</b> %.2f <i>μg/m³</i></string>
    <string name="no2"><b>NO₂:</b> %.2f <i>μg/m³</i></string>
    <string name="so2"><b>SO₂:</b> %.2f <i>μg/m³</i></string>
    <string name="co2"><b>CO₂:</b> %.2f <i>μg/m³</i></string>
    <string name="north">North</string>
    <string name="northeast">North East</string>
    <string name="east">East</string>
    <string name="southeast">South East</string>
    <string name="south">South</string>
    <string name="southwest">South West</string>
    <string name="west">West</string>
    <string name="northwest">North West</string>
    <string name="no_chart_data">No chart data</string>
    <string name="user_fail">Failed to get user</string>
    <string name="greet_default">Hi</string>
    <string name="level_of_air">Level of air</string>
    <string name="manage_account">Manage your account</string>
    <string name="account">Account</string>
    <string name="logout">Log out</string>
    <string name="about">About Koki</string>
    <string name="about_summary">Repository, app info</string>
    <string name="settings_account" translatable="false">io.github.kdetard.koki.feature.settings.SettingsAccountController</string>
    <string name="settings_theme" translatable="false">io.github.kdetard.koki.feature.settings.SettingsThemeController</string>
    <string name="settings_language" translatable="false">io.github.kdetard.koki.feature.settings.SettingsLanguageController</string>
    <string name="settings_logout" translatable="false">io.github.kdetard.koki.feature.settings.SettingsLogoutController</string>
    <string name="settings_about" translatable="false">io.github.kdetard.koki.feature.settings.SettingsAboutController</string>
    <string name="confirm_logout">Do you want to log out?</string>
    <string name="decline_logout">No</string>
    <string name="accept_logout">Yes, sign me out</string>
    <string name="language_system_default">System default</string>
    <string name="language_en_us" translatable="false">English (United States)</string>
    <string name="language_vi_vn" translatable="false">Tiếng Việt (Việt Nam)</string>
    <string name="cancel">Cancel</string>
    <string name="theme">Theme</string>
    <string name="theme_auto">Auto</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="language_en_us_short" translatable="false">en-US</string>
    <string name="language_vi_vn_short" translatable="false">vi-VN</string>
    <string name="language_system_default_short" translatable="false">system</string>
</resources>