<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    tools:context=".feature.auth.SignUpController">

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.TitleLarge"
        android:id="@+id/signUpController_titleTxt"
        android:text="@string/signup_title"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signUpController_formLayout"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/signUpController_formLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:showDividers="middle"
        app:divider="@drawable/empty_small_divider"
        app:layout_constraintTop_toTopOf="@id/signUpController_titleTxt"
        app:layout_constraintBottom_toTopOf="@id/signUpController_signupBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Koki.TextInputLayout"
            android:id="@+id/signUpController_usernameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:helperText="@string/type_username_help"
            app:startIconDrawable="@drawable/ic_account_circle_outline_24dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpController_usernameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:autofillHints="username"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Koki.TextInputLayout"
            android:id="@+id/signUpController_emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:helperText="@string/type_email_help"
            app:startIconDrawable="@drawable/ic_alternate_email_24dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpController_emailTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Koki.TextInputLayout"
            android:id="@+id/signUpController_passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:helperText="@string/type_password_help"
            app:startIconDrawable="@drawable/ic_password_24dp"
            app:endIconMode="password_toggle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpController_passwordTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:autofillHints="password"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Koki.TextInputLayout"
            android:id="@+id/signUpController_confirmPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            app:helperText="@string/retype_password_help"
            app:startIconDrawable="@drawable/ic_password_24dp"
            app:endIconMode="password_toggle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpController_confirmPasswordTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:autofillHints="password"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/signUpController_signupBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>