<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    tools:context=".feature.auth.ResetPasswordController">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/resetPasswordController_titleTxt"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:text="@string/reset_password"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/resetPasswordController_formLayout"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/resetPasswordController_formLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:showDividers="middle"
        app:divider="@drawable/empty_small_divider"
        app:layout_constraintTop_toTopOf="@id/resetPasswordController_titleTxt"
        app:layout_constraintBottom_toTopOf="@id/resetPasswordController_resetPasswordBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/resetPasswordController_usernameLayout"
            style="@style/Widget.Koki.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username_or_password"
            app:helperText="@string/type_username_or_email_help"
            app:startIconDrawable="@drawable/ic_account_circle_outline_24dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/resetPasswordController_usernameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:autofillHints="username|emailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/resetPasswordController_resetPasswordBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_action"
        android:textStyle="bold"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>