<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:longClickable="true"
    android:checkable="false"
    app:cardCornerRadius="26dp"
    app:cardBackgroundColor="?attr/colorSurfaceContainerHighest"
    app:strokeWidth="0dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        >

        <ImageView
            android:id="@+id/asset_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_assets_outline_24dp"
            android:contentDescription="@string/asset_group_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/asset_info"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/padding_8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/asset_icon"
            app:layout_constraintEnd_toStartOf="@id/asset_icon_next"
            android:orientation="vertical"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/asset_title"
                style="@style/TextAppearance.Material3.BodySmall"
                tools:text="@string/asset_group"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/asset_description"
                style="@style/TextAppearance.Material3.BodySmall"
                tools:text="@string/asset_group_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="2"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <ImageView
            android:id="@+id/asset_icon_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/asset_group_icon_next"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>